# notely

./: .gitignore
.github/workflows/: deploy.yml  python-build.yml  spring-deploy.yml
electron-app/: .gitignore  index.html  main.js  package.json
python-client/: .gitignore  README.md  notely-stt.spec  pyproject.toml
python-client/python_client/: __main__.py  stt.py
spring-server/: .gitignore  Dockerfile  build.gradle
spring-server/.github/workflows/: deploy.yml
spring-server/src/main/java/com/mycom/myapp/: SpringServerApplication.java
spring-server/src/main/java/com/mycom/myapp/dto/base/: BaseResponseDto.java  ErrorResponseDto.java
spring-server/src/main/java/com/mycom/myapp/entity/: BaseEntity.java  Note.java  NoteCollection.java  User.java
spring-server/src/main/java/com/mycom/myapp/exception/code/: ErrorCode.java
spring-server/src/main/java/com/mycom/myapp/repository/: NoteCollectionRepository.java  NoteRepository.java  UserRepository.java
spring-server/src/main/resources/: application.yml
spring-server/src/test/java/com/mycom/myapp/: SpringServerApplicationTests.java
