[project]
name = "python_client"
version = "0.1.0"
description = ""
authors = [
    {name = "Jong Kyu Lee",email = "jklee3409@khu.ac.kr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper (>=1.2.0,<2.0.0)",
    "webrtcvad (>=2.0.10,<3.0.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
